draft table developed and renders. Currently resolving the issue where the rounds dont display/collapse correctly

--- a/front-end/src/layout/Layout.css
+++ b/front-end/src/layout/Layout.css
@@ -187,3 +187,11 @@ tr:nth-child(odd){
 .team-cards-whole{
   margin: 10px;
 }
+
+/* .teamToggleButtons{
+  margin: 3px
+} */
+
+.draftTeamButtonContainer{
+  width: 100%;
+}
